--- a/themes/ga/layouts/_default/single.html
+++ b/themes/ga/layouts/_default/single.html
@@ -10,6 +10,7 @@
 
      <div style="margin:25px;">
           <h1>{{.Title}}</h1>
+          <h2>{{.Description}}</h2>
           <div style="color:grey; font-size:16px;">{{ dateFormat "Monday, Jan 2, 2006" .Date }}</div>
           <div style="color:grey; font-size:16px;">{{if .Params.author}}Author: {{.Params.Author}}{{end}}</div>
           <div style="font-size:18px;">{{.Content}}</div>
