--- a/themes/ga/layouts/partials/header.html
+++ b/themes/ga/layouts/partials/header.html
@@ -1,4 +1,4 @@
 <div style="text-align: center; height: 75px; padding:1px;   text-transform:capitalize; background-color:#42a5f5; color:white">
      <h1 style="margin-bottom:-10px; "><a style="text-decoration: none; color:white;"href="/">Strona - {{.Template}} - {{.Kind}}</a></h1>
-     <h2>{{.Site.Title}}</h2>
+     <h2>{{.Site}}</h2>
 </div>
