--- a/themes/ga3/static/css/fonts.css
+++ b/themes/ga3/static/css/fonts.css
@@ -10,6 +10,7 @@
     url('../fonts/libre-baskerville-v7-latin-regular.woff') format('woff'), /* Modern Browsers */
     url('../fonts/libre-baskerville-v7-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
     url('../fonts/libre-baskerville-v7-latin-regular.svg#LibreBaskerville') format('svg'); /* Legacy iOS */
+    font-display: swap;
 }
 
 /* libre-baskerville-700 - latin */
@@ -24,6 +25,7 @@
     url('../fonts/libre-baskerville-v7-latin-700.woff') format('woff'), /* Modern Browsers */
     url('../fonts/libre-baskerville-v7-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
     url('../fonts/libre-baskerville-v7-latin-700.svg#LibreBaskerville') format('svg'); /* Legacy iOS */
+    font-display: swap;
 }
 
 /* libre-baskerville-italic - latin */
@@ -38,4 +40,5 @@
     url('../fonts/libre-baskerville-v7-latin-italic.woff') format('woff'), /* Modern Browsers */
     url('../fonts/libre-baskerville-v7-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
     url('../fonts/libre-baskerville-v7-latin-italic.svg#LibreBaskerville') format('svg'); /* Legacy iOS */
+    font-display: swap;
 }
