--- a/themes/ga3/layouts/_default/single.html
+++ b/themes/ga3/layouts/_default/single.html
@@ -8,25 +8,8 @@
 		{{ partial "single/header.html" . }}
 
 		{{ .Content }}
-
 		
-			<div class="post-taxonomies">
-				{{ if .Params.categories }}
-					<ul class="post-categories">
-						{{ range .Params.categories }}
-							<li><a href="{{ "categories/" | urlize | absLangURL }}">{{ . }}</a></li>
-						{{ end }}
-					</ul>
-					{{ end }}
-					{{ if .Params.tags }}
-						<ul class="post-tags">
-							{{ range .Params.tags }}
-								<li><a href="{{ "tags/" | absLangURL }}{{ . | urlize }}">#{{ . }}</a></li>
-							{{ end }}
-						</ul>
-				{{ end }}
-			</div>
-		
+		{{ partial "cat_tags.html" . }}
 
 		{{ partial "single/footer.html" . }}
 	</div>
