--- a/themes/ga3/layouts/contact/list.html
+++ b/themes/ga3/layouts/contact/list.html
@@ -9,6 +9,15 @@
 
 		{{ .Content }}
 		
+		<div class="flex-ns mb3">
+	        	{{ range .Params.contact_entries }}
+				<div>
+					<h4 class="f4 b lh-title mb2 primary">{{ .heading }}</h4>
+					<p>{{ .text }}</p>
+				</div>
+			{{ end }}
+		</div>
+
 		{{ partial "single/footer.html" . }}
 	</div>
 
