--- a/themes/ga3/layouts/contact/list.html
+++ b/themes/ga3/layouts/contact/list.html
@@ -13,7 +13,7 @@
 	        	{{ range .Params.contact_entries }}
 				<div>
 					<h4 class="f4 b lh-title mb2 primary">{{ .heading }}</h4>
-					<p>{{ .text }}</p>
+					<p>{{ .body }}</p>
 				</div>
 			{{ end }}
 		</div>
