--- a/themes/ga3/layouts/contact/list.html
+++ b/themes/ga3/layouts/contact/list.html
@@ -9,10 +9,10 @@
 
 		{{ .Content }}
 		
-		<div class="flex-ns mb3">
+		<div style="margin-top:50px;">
 	        	{{ range .Params.contact_entries }}
 				<div>
-					<h4 class="f4 b lh-title mb2 primary">{{ .heading }}</h4>
+					<h4 style="text-transform: uppercase;">{{ .heading }}</h4>
 					<p>{{ .body }}</p>
 				</div>
 			{{ end }}
