zmiana kilu plików

--- a/themes/ga3/layouts/404.html
+++ b/themes/ga3/layouts/404.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
-
-<h1>Nie znaleziono...</h1>
-<h3><a href="{{ "/" | relURL }}">Powrót do strony głównej</a></h3>
+<div class="catalogue"><h1>Nie znaleziono...</h1>
+      <h3><a href="{{ "/" | relURL }}">Powrót do strony głównej</a></h3>
+    </div>
+    
 
 {{ end }}
