--- a/themes/ga3/layouts/404.html
+++ b/themes/ga3/layouts/404.html
@@ -1,7 +1,8 @@
 {{ define "main" }}
-<div class="catalogue"><h1>Nie znaleziono...</h1>
+  <div class="post">
+     <h1>Nie znaleziono...</h1>
       <h3><a href="{{ "/" | relURL }}">Powrót do strony głównej</a></h3>
     </div>
     
-
+ 
 {{ end }}
