zmiana kilu pliu 404

--- a/themes/ga3/layouts/404.html
+++ b/themes/ga3/layouts/404.html
@@ -1,8 +1,9 @@
 {{ define "main" }}
+<main>
   <div class="post">
      <h1>Nie znaleziono...</h1>
       <h3><a href="{{ "/" | relURL }}">Powrót do strony głównej</a></h3>
     </div>
-    
+</main>   
  
 {{ end }}
