--- a/themes/ga3/layouts/_default/terms.html
+++ b/themes/ga3/layouts/_default/terms.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <main>
-    <h1>{{ .Name }}</h1>
+    <h1>{{ .Title }}</h1>
 	<div class="catalogue">
         <ul>
         {{- range (.Paginate .Data.Pages).Pages -}}
