--- a/themes/ga3/layouts/partials/head.html
+++ b/themes/ga3/layouts/partials/head.html
@@ -1,6 +1,7 @@
 <head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 		{{- if .IsHome }}
 			<meta name="description" content="{{ .Site.Params.Description }}">
 		{{- else if .Description }}
