--- a/themes/ga3/assets/scss/tale/_layout.scss
+++ b/themes/ga3/assets/scss/tale/_layout.scss
@@ -67,7 +67,9 @@ footer,
 }
 
 .post-taxonomies {
-  margin-top: 30px;
+  margin-top: 50px;
+  padding-top: 50px;
+  border: 0.5px solid #e5e5e5;
 }
 
 .post-taxonomies span {
