--- a/themes/ga3/assets/scss/tale/_layout.scss
+++ b/themes/ga3/assets/scss/tale/_layout.scss
@@ -69,7 +69,7 @@ footer,
 .post-taxonomies {
   margin-top: 50px;
   padding-top: 50px;
-  border: 0.5px solid #e5e5e5;
+  border-top: 0.5px solid #e5e5e5;
 }
 
 .post-taxonomies span {
